# SpaceShooter

./: .gitignore  CMakeLists.txt  README.md
include/: Asteroid.h  Entity.h  Player.h
src/: Asteroid.cpp  Player.cpp  main.cpp
